Added code section

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -207,7 +207,7 @@ width: 20px;
 #services {background-image: url(/images/bg-ok_2.png); }
 #skills {background-image: url(/images/bg-cogwheels.png); }
 #bonus {background-image: url(/images/bg-gift.png); }
-#portfolio {background-image: url(/images/bg-briefcase.png); }
+#code {background-image: url(/images/bg-briefcase.png); }
 #clients {background-image: url(/images/bg-group.png); }
 #testimonials {background-image: url(/images/bg-comments.png); }
 #services2 {background-image: url(/images/bg-dislikes.png); }
