--- a/public/css/404-style.css
+++ b/public/css/404-style.css
@@ -92,7 +92,7 @@ header {
     display: inline-block;
 }
 .panda-wrapper {
-    background-color: #D9443F;
+    background-color: #0098FF;
     border-width: 8px 0;
     border-style: solid;
     border-color: #000;
@@ -202,7 +202,7 @@ p.text-big       {font-size: 80px;}
     right: -272px;
 }
 .panda-bg-arrow {
-    background-image: url('../images/bg-arrow.png');
+    background-image: url('../images/bg-arrow-white.png');
     background-repeat: no-repeat;
     background-position: center center;
     height: 128px; 
