--- a/public/css/style.css
+++ b/public/css/style.css
@@ -30,15 +30,15 @@ h4 {font-size: 16px}
 h5 {font-size: 14px}
 h6 {font-size: 12px}
 
-a {text-decoration: none;color: #ff6760;}
-a:hover {color: #ff6760;}
+a {text-decoration: none;color: #72B5E5;}
+a:hover {color: #72B5E5;}
 
 p.intro{font-size: 24px;font-weight: 300;line-height: 34px;padding-bottom: 45px;}
 p.intro.big{font-size: 34px;line-height: 44px; padding-bottom: 30px;}
 p.just{text-align: justify;}
 
 .post-content ol, .post-content ul {list-style: none outside none; margin-bottom: 15px;}
-.post-content ol li:before, .post-content ul li:before {content: "."; font-size: 20px; width: 15px; height: 15px; line-height: 0; float: left; display: inline-block; margin-top: 6px; color: #ff6760;}
+.post-content ol li:before, .post-content ul li:before {content: "."; font-size: 20px; width: 15px; height: 15px; line-height: 0; float: left; display: inline-block; margin-top: 6px; color: #72B5E5;}
 .post-content ol li li, .post-content ul li li {font-size: 90%; margin-left: 15px;}
 .post-content ol ol, .post-content ul ul {margin-bottom: 0;}
 
@@ -49,11 +49,11 @@ dl dd {margin-bottom: 5px !important;}
 
 . {padding: 10px; background: #fff; overflow: hidden;}
 
-.primarycolor {color: #ff6760 !important;}
+.primarycolor {color: #72B5E5 !important;}
 
 .coffee-container, .cream-container, .sugar-container {position: relative;}
 .coffee-container {background-color: #222; color: #ccc;}
-.sugar-container {background-color: #ff6760; color: #eee;}
+.sugar-container {background-color: #72B5E5; color: #eee;}
 .coffee-container h1, .coffee-container h2, .coffee-container h3, .coffee-container h4, .coffee-container h5, .coffee-container h6 {color: #eee;}
 .sugar-container a, .sugar-container h1, .sugar-container h2, .sugar-container h3, .sugar-container h4, .sugar-container h5, .sugar-container h6 {color: #fff;}
 
@@ -91,7 +91,7 @@ top: 32px; left: 22px;
 }
 .coffee-container .icon-container div {background: #222; color: #fff; }
 .cream-container .icon-container div {background: #f5f5f5; color: #333; }
-.sugar-container .icon-container div {background: #ff6760; color: #fff; }
+.sugar-container .icon-container div {background: #72B5E5; color: #fff; }
 
 .icon-bg {position: absolute; font-size: 400px; width: 100%; top: 0;}
 .icon-bg .glyphicons {text-align: center; width: 100%;}
@@ -124,7 +124,7 @@ color:#fff;
 .sidr ul{display:block;margin:0 0 15px;padding:0;}
 .sidr ul li a {display:block; margin:0; line-height: 30px; border-bottom: 1px solid #1A1A1A; color:#fff; padding:0 15px;}
 .sidr ul li a:hover {background: #1A1A1A;}
-.sidr ul li.active a, .sidr ul li.sidr-class-active a{background: #ff6760;}
+.sidr ul li.active a, .sidr ul li.sidr-class-active a{background: #72B5E5;}
 
 .sidr a .glyphicons { 
 font-size: 12px;
@@ -185,7 +185,7 @@ width: 20px;
     margin: 0 2px;
 }
 .rslides_tabs a:hover {background-color: #1D1D1D;}
-.rslides_tabs .rslides_here a {background-color: #FF6760;}
+.rslides_tabs .rslides_here a {background-color: #72B5E5;}
 .sugar-container .rslides_tabs .rslides_here a {background-color: #fff;}
 .rslides_tabs { text-align: center;}
 .rslides_tabs li {
@@ -277,7 +277,7 @@ font-size: 12px;
 text-transform: uppercase;
 color: #FFF;
 display: inline-block;
-background-color: #ff6760;
+background-color: #72B5E5;
 padding: 6px 20px;
 margin: 0;
 cursor: pointer;
@@ -289,7 +289,7 @@ border-radius: 5px;
 text-align: center;
 letter-spacing: 1px;
 }
-.btn-nav li > a:hover, a.btn:hover {color: #fff; background: #c95752;}
+.btn-nav li > a:hover, a.btn:hover {color: #fff; background: #60A4E0;}
 .sugar-container .btn-nav li > a, .sugar-container .btn {background-color: #fff; color: #333;}
 .sugar-container .btn-nav li > a:hover, .sugar-container a.btn:hover {background: #ddd; color: #333;}
 
@@ -308,7 +308,7 @@ letter-spacing: 1px;
 .btn.transparent {background: transparent !important; color: #333; }
 .coffee-container .btn.transparent {color: #fff;}
 .sugar-container .btn.transparent {color: #fff;}
-.btn.transparent:hover {color: #ff6760; }
+.btn.transparent:hover {color: #72B5E5; }
 .sugar-container .btn.transparent:hover {color: #333; }
 
 
@@ -369,7 +369,7 @@ input.error, textarea.error {margin-bottom: 10px; }
 /* header */
 #header {color: #fff; position: fixed; top: 0; height: 40px; text-align: right; z-index: 9999; width: 100%;}
 #header .wrap span {display: none;}
-#header.scrolled {background: #ff6760; }
+#header.scrolled {background: #60A4E0; }
 #header.scrolled .wrap span {display: inline-block; font-size: 18px; line-height: 35px; margin: 0 2px;}
 #header #langtrigger { position: absolute; top: 0; right: 0; color: #fff !important; line-height: 30px; margin: 0; padding-top: 0; font-size: 20px;}
 #header .lang { font-size: 12px; padding-top: 4px; padding-right: 45px; }
@@ -391,7 +391,7 @@ margin-bottom: 45px;
 
 .position.last {margin-bottom: 15px;}
 .position h3 {margin-bottom: 15px;}
-.position h4 {font-size: 30px; line-height: 40px; color: #ff6760;}
+.position h4 {font-size: 30px; line-height: 40px; color: #72B5E5;}
 .date-detail { font-style: italic; font-size: 14px; margin-bottom: 15px;}
 
 .position2 {margin-bottom: 45px; overflow: hidden;}
@@ -445,7 +445,7 @@ width: 15px;
 
 /* Scrolltop button */
 #scrolltop {
-background: #ff6760;
+background: #72B5E5;
 display: block;
 width: 40px; height: 40px;
 position: fixed; 
@@ -472,7 +472,7 @@ opacity: 1;}
 /* overlay */
 .hovereffect {display: block; overflow: hidden; position: relative; line-height: 0; height: auto; }
 .actions {width: 100%; height: 100%; text-align: center; display: table-cell; vertical-align: middle; }
-.actions a {line-height: 30px; display: inline-block; width: 40px; height: 40px; margin: 5px 10px; border-radius: 500px; background: #ff6760; color: #fff;}
+.actions a {line-height: 30px; display: inline-block; width: 40px; height: 40px; margin: 5px 10px; border-radius: 500px; background: #72B5E5; color: #fff;}
 .actions a .glyphicons, .actions a .glyphicons i:before {padding: 0; font-size: 20px; line-height: 40px; width:35px; height:40px; text-align: center;}
 .actions a .glyphicons {
 opacity: .75;
