--- a/public/css/style.css
+++ b/public/css/style.css
@@ -137,6 +137,10 @@ dl dd {
     text-align: center;
 }
 
+.text-justify {
+    text-align: justify;
+}
+
 .pad-right {
     padding-right: 20px;
 }
@@ -160,7 +164,6 @@ section {
     max-width: 700px;
     margin: 4rem auto;
     word-break: normal;
-    text-align: justify;
     hyphens: auto;
 }
 
