--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,6 +4,7 @@
  * 2. Prevent iOS text size adjust after orientation change, without disabling
  *    user zoom.
  */
+@import url("http://fonts.googleapis.com/css?family=Open+Sans:300,400italic,400,600");
 html {
   font-family: sans-serif;
   /* 1 */
@@ -356,99 +357,666 @@ td,
 th {
   padding: 0; }
 
-/*! style.css */
-html {
-  height: 100%;
-  max-height: 100%;
-  font-size: 62.5%; }
-
+/* Open Sans  */
+/* General */
 body {
-  height: 100%;
-  max-height: 100%;
-  font-family: 'Droid Serif', serif;
-  font-size: 2rem;
-  line-height: 1.6em;
-  color: #3A4145;
-  margin: 0; }
+  color: #666666;
+  font-size: 13px;
+  line-height: 23px;
+  background: #fff;
+  font-family: 'Open Sans', sans-serif;
+  -webkit-font-smoothing: antialiased; }
 
-#logo {
-  display: block;
-  background-color: #333;
-  padding: 1em 0;
-  margin: 0; }
-
-#logo img {
-  margin-bottom: .5em;
-  border-radius: 50%; }
-
-#logo > * {
-  display: block;
-  margin: 0 auto;
-  text-align: center;
-  color: #eee; }
-
-::-moz-selection {
-  color: #222;
-  background: #D6EDFF;
-  text-shadow: none; }
-
-::selection {
-  color: #222;
-  background: #D6EDFF;
-  text-shadow: none; }
-
-h1, h2, h3,
-h4, h5, h6 {
-  line-height: 1;
-  margin-top: 0;
-  font-family: 'Source Sans Pro', sans-serif; }
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  color: #666;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 600;
+  margin: 2px 0px;
+  padding: 0px; }
 
 h1 {
-  font-family: 'Open Sans', sans-serif;
-  font-size: 5rem;
-  line-height: 1.2em;
-  letter-spacing: -2px;
-  text-indent: -3px; }
+  font-size: 30px;
+  line-height: 45px; }
 
 h2 {
-  font-size: 4rem;
-  line-height: 1.2em;
-  letter-spacing: -1px;
-  text-indent: -2px; }
+  font-size: 25px;
+  line-height: 40px; }
 
 h3 {
-  font-size: 3.5rem; }
+  font-size: 22px;
+  line-height: 37px; }
 
 h4 {
-  font-size: 3rem; }
+  font-size: 18px;
+  line-height: 33px; }
 
 h5 {
-  font-size: 2.5rem; }
+  font-size: 15px;
+  line-height: 30px; }
 
 h6 {
-  font-size: 2rem; }
+  font-size: 13px;
+  line-height: 28px; }
+
+p {
+  margin: 2px 0px;
+  padding: 0px;
+  margin-bottom: 5px;
+  line-height: 28px; }
 
 a {
-  color: #4a4a4a;
-  transition: color ease 0.3s; }
+  text-decoration: none;
+  color: #777; }
 
-a:hover {
-  color: #57A3E8; }
+a:hover, a:active, a:focus {
+  outline: 0;
+  text-decoration: none;
+  color: #999; }
 
-h1 a, h2 a, h3 a,
-h4 a, h5 a, h6 a {
-  color: #50585D; }
+hr {
+  margin: 10px 0px;
+  padding: 0px;
+  border-top: 0px;
+  border-bottom: 1px solid #eee; }
 
-p, ul, ol {
-  margin: 1.6em 0; }
+:focus {
+  outline: none; }
 
-ol ol, ul ul,
-ul ol, ol ul {
-  margin: 0.4em 0; }
+::-moz-focus-inner {
+  border: 0; }
 
-dt {
-  font-weight: bold; }
+/* Text color classes */
+.white {
+  color: #ffffff !important; }
 
+.grey {
+  color: #eeeeee !important; }
+
+.black {
+  color: #555555 !important; }
+
+.red {
+  color: #f75353 !important; }
+
+.green {
+  color: #51d466 !important; }
+
+.lblue {
+  color: #32c8de !important; }
+
+.blue {
+  color: #609cec !important; }
+
+.orange {
+  color: #f78153 !important; }
+
+.yellow {
+  color: #fcd419 !important; }
+
+.purple {
+  color: #cb79e6 !important; }
+
+.rose {
+  color: #ff61e7 !important; }
+
+.brown {
+  color: #d08166 !important; }
+
+/* Background color classes */
+.bg-white {
+  background-color: #ffffff !important; }
+
+.bg-grey {
+  background-color: #eeeeee !important; }
+
+.bg-black {
+  background-color: #555555 !important; }
+
+.bg-red {
+  background-color: #f75353 !important; }
+
+.bg-green {
+  background-color: #51d466 !important; }
+
+.bg-lblue {
+  background-color: #32c8de !important; }
+
+.bg-blue {
+  background-color: #609cec !important; }
+
+.bg-orange {
+  background-color: #f78153 !important; }
+
+.bg-yellow {
+  background-color: #fcd419 !important; }
+
+.bg-purple {
+  background-color: #cb79e6 !important; }
+
+.bg-rose {
+  background-color: #ff61e7 !important; }
+
+.bg-brown {
+  background-color: #d08166 !important; }
+
+/* Border color classes */
+.br-white {
+  border: 1px solid #ffffff !important; }
+
+.br-grey {
+  border: 1px solid #eeeeee; }
+
+.br-black {
+  border: 1px solid #555555; }
+
+.br-red {
+  border: 1px solid #f75353; }
+
+.br-green {
+  border: 1px solid #51d466; }
+
+.br-lblue {
+  border: 1px solid #32c8de; }
+
+.br-blue {
+  border: 1px solid #609cec; }
+
+.br-orange {
+  border: 1px solid #f78153; }
+
+.br-yellow {
+  border: 1px solid #fcd419; }
+
+.br-purple {
+  border: 1px solid #cb79e6; }
+
+.br-rose {
+  border: 1px solid #ff61e7; }
+
+.br-brown {
+  border: 1px solid #d08166; }
+
+/* Button classes */
+.btn {
+  border-radius: 2px;
+  position: relative; }
+
+.btn.btn-no-border {
+  border: 0px !important; }
+
+/* Button colors */
+.btn.btn-white {
+  background: #ffffff;
+  color: #666666;
+  border: 1px solid #dddddd; }
+
+.btn.btn-white:hover,
+.btn.btn-white:focus,
+.btn.btn-white.active,
+.btn.btn-white:active {
+  background: #f7f7f7;
+  color: #666666; }
+
+.btn.btn-grey {
+  background: #eeeeee;
+  color: #666666;
+  border: 1px solid #d5d5d5; }
+
+.btn.btn-grey:hover,
+.btn.btn-grey:focus,
+.btn.btn-grey.active,
+.btn.btn-grey:active {
+  background: #d5d5d5;
+  color: #999; }
+
+.btn.btn-black {
+  color: #ffffff;
+  background: #666666;
+  border: 1px solid #4d4d4d; }
+
+.btn.btn-black:hover,
+.btn.btn-black:focus,
+.btn.btn-black.active,
+.btn.btn-black:active {
+  background: #4d4d4d;
+  color: #ffffff; }
+
+.btn.btn-red {
+  color: #ffffff;
+  background: #ed5441;
+  border: 1px solid #e52d16; }
+
+.btn.btn-red:hover,
+.btn.btn-red:focus,
+.btn.btn-red.active,
+.btn.btn-red:active {
+  color: #ffffff;
+  background: #e52d16; }
+
+.btn.btn-green {
+  color: #ffffff;
+  background: #51d466;
+  border: 1px solid #30c247; }
+
+.btn.btn-green:hover,
+.btn.btn-green:focus,
+.btn.btn-green.active,
+.btn.btn-green:active {
+  background: #30c247;
+  color: #ffffff; }
+
+.btn.btn-lblue {
+  color: #ffffff;
+  background: #32c8de;
+  border: 1px solid #1faabe; }
+
+.btn.btn-lblue:hover,
+.btn.btn-lblue:focus,
+.btn.btn-lblue.active,
+.btn.btn-lblue:active {
+  background: #1faabe;
+  color: #ffffff; }
+
+.btn.btn-blue {
+  color: #ffffff;
+  background: #609cec;
+  border: 1px solid #3280e7; }
+
+.btn.btn-blue:hover,
+.btn.btn-blue:focus,
+.btn.btn-blue.active,
+.btn.btn-blue:active {
+  background: #3280e7;
+  color: #ffffff; }
+
+.btn.btn-orange {
+  color: #ffffff;
+  background: #f8a841;
+  border: 1px solid #f69110; }
+
+.btn.btn-orange:hover,
+.btn.btn-orange:focus,
+.btn.btn-orange.active,
+.btn.btn-orange:active {
+  background: #f69110;
+  color: #ffffff; }
+
+.btn.btn-yellow {
+  background: #fcd419;
+  color: #ffffff;
+  border: 1px solid #dfb803; }
+
+.btn.btn-yellow:hover,
+.btn.btn-yellow:focus,
+.btn.btn-yellow.active,
+.btn.btn-yellow:active {
+  background: #dfb803;
+  color: #ffffff; }
+
+.btn.btn-purple {
+  background: #cb79e6;
+  color: #ffffff;
+  border: 1px solid #ba4ede; }
+
+.btn.btn-purple:hover,
+.btn.btn-purple:focus,
+.btn.btn-purple.active,
+.btn.btn-purple:active {
+  background: #ba4ede;
+  color: #ffffff; }
+
+.btn.btn-rose {
+  background: #ff61e7;
+  color: #ffffff;
+  border: 1px solid #ff2edf; }
+
+.btn.btn-rose:hover,
+.btn.btn-rose:focus,
+.btn.btn-rose.active,
+.btn.btn-rose:active {
+  background: #ff2edf;
+  color: #ffffff; }
+
+.btn.btn-brown {
+  background: #d08166;
+  color: #ffffff;
+  border: 1px solid #c4613f; }
+
+.btn.btn-brown:hover,
+.btn.btn-brown:focus,
+.btn.btn-brown.active,
+.btn.btn-brown:active {
+  background: #c4613f;
+  color: #ffffff; }
+
+/* Label */
+.label {
+  border-radius: 2px;
+  font-weight: normal;
+  padding: 3px 7px;
+  font-size: 12px;
+  line-height: 18px; }
+
+/* Label sizes */
+.label.label-xs {
+  font-size: 10px;
+  padding: 1px 5px;
+  line-height: 12px; }
+
+.label.label-sm {
+  font-size: 11px;
+  padding: 2px 6px;
+  line-height: 15px; }
+
+.label.label-lg {
+  font-size: 13px;
+  padding: 5px 9px;
+  line-height: 23px; }
+
+/* Label colors */
+.label.label-white {
+  color: #666666 !important;
+  background: #f7f7f7; }
+
+.label.label-grey {
+  color: #666666 !important;
+  background: #eeeeee; }
+
+.label.label-black {
+  color: #ffffff;
+  background: #666666; }
+
+.label.label-red {
+  color: #ffffff;
+  background: #ed5441; }
+
+.label.label-green {
+  color: #ffffff;
+  background: #51d466; }
+
+.label.label-lblue {
+  color: #ffffff;
+  background: #32c8de; }
+
+.label.label-blue {
+  color: #ffffff;
+  background: #609cec; }
+
+.label.label-orange {
+  color: #ffffff;
+  background: #f8a841; }
+
+.label.label-yellow {
+  background: #fcd419;
+  color: #ffffff; }
+
+.label.label-purple {
+  background: #cb79e6;
+  color: #ffffff; }
+
+.label.label-rose {
+  background: #ff61e7;
+  color: #ffffff; }
+
+.label.label-brown {
+  background: #d08166;
+  color: #ffffff; }
+
+/* Badges */
+.badge {
+  min-width: 10px;
+  padding: 3px 7px !important;
+  font-size: 12px;
+  line-height: 12px;
+  font-weight: normal;
+  display: inline-block;
+  color: #fff;
+  border-radius: 10px; }
+
+.badge.badge-white {
+  color: #666666;
+  background: #ffffff; }
+
+.badge.badge-grey {
+  color: #a2a2a2;
+  background: #eeeeee; }
+
+.badge.badge-black {
+  color: #ffffff;
+  background: #666666; }
+
+.badge.badge-red {
+  color: #ffffff;
+  background: #ed5441; }
+
+.badge.badge-green {
+  color: #ffffff;
+  background: #51d466; }
+
+.badge.badge-lblue {
+  color: #ffffff;
+  background: #32c8de; }
+
+.badge.badge-blue {
+  color: #ffffff;
+  background: #609cec; }
+
+.badge.badge-orange {
+  color: #ffffff;
+  background: #f8a841; }
+
+.badge.badge-yellow {
+  color: #ffffff;
+  background: #fcd419; }
+
+.badge.badge-purple {
+  color: #ffffff;
+  background: #cb79e6; }
+
+.badge.badge-rose {
+  color: #ffffff;
+  background: #ff61e7; }
+
+.badge.badge-brown {
+  color: #ffffff;
+  background: #d08166; }
+
+.btn .badge {
+  position: absolute;
+  top: -13px;
+  right: -8px; }
+
+/* Social Media */
+.facebook {
+  background: #3280e7; }
+
+.facebook:hover {
+  background: #134fa0; }
+
+.twitter {
+  background: #32c8de; }
+
+.twitter:hover {
+  background: #188392; }
+
+.google-plus {
+  background: #f96f4a; }
+
+.google-plus:hover {
+  background: #eb6440; }
+
+.linkedin {
+  background: #729fda; }
+
+.linkedin:hover {
+  background: #3069b6; }
+
+.pinterest {
+  background: #ed5441; }
+
+.pinterest:hover {
+  background: #b72411; }
+
+.dropbox {
+  background: #32c8de; }
+
+.dropbox:hover {
+  background: #188392; }
+
+.bitcoin {
+  background: #f8a841; }
+
+.bitcoin:hover {
+  background: #cc7607; }
+
+.foursquare {
+  background: #22bed4; }
+
+.foursquare:hover {
+  background: #146f7c; }
+
+.flickr {
+  background: #ff61e7; }
+
+.flickr:hover {
+  background: #fa00d4; }
+
+.github {
+  background: #666666; }
+
+.github:hover {
+  background: #333333; }
+
+.instagram {
+  background: #d6917a; }
+
+.instagram:hover {
+  background: #b35637; }
+
+.skype {
+  background: #32c8de; }
+
+.skype:hover {
+  background: #188392; }
+
+.tumblr {
+  background: #84a1c8; }
+
+.tumblr:hover {
+  background: #476d9f; }
+
+.vimeo {
+  background: #32c8de; }
+
+.vimeo:hover {
+  background: #188392; }
+
+.dribbble {
+  background: #ff2edf; }
+
+.dribbble:hover {
+  background: #c700a9; }
+
+.youtube {
+  background: #ed5441; }
+
+.youtube:hover {
+  background: #b72411; }
+
+/* Main CSS */
+/* Body */
+body {
+  background: #fcfcfc; }
+
+/* UI - X */
+.v-card {
+  max-width: 700px;
+  margin: 60px auto;
+  padding: 0px 20px; }
+
+/* Column Mobile */
+@media (max-width: 560px) {
+  .v-card .col-mob {
+    width: 50%; } }
+@media (max-width: 340px) {
+  .v-card .col-mob {
+    width: 100%; } }
+/* User */
+.v-card .ui-user {
+  text-align: center;
+  margin-bottom: 10px; }
+
+/* User Image */
+.v-card .ui-user img {
+  width: 100px;
+  border-radius: 100%;
+  margin: 0px auto;
+  border: 3px solid #fff;
+  box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.3);
+  margin-bottom: 10px; }
+
+/* User Name */
+.v-card .ui-user h3 {
+  font-size: 18px;
+  line-height: 28px;
+  font-weight: 600;
+  text-transform: uppercase; }
+
+.v-card .ui-user h3 > span {
+  font-size: 14px;
+  line-height: 24px;
+  color: #999;
+  display: block;
+  font-weight: 400; }
+
+/* Paragraph */
+.v-card p {
+  font-size: 18px;
+  line-height: 38px;
+  text-align: center;
+  margin: 18px 0px 13px;
+  font-weight: 400;
+  color: #555; }
+
+.v-card p > span {
+  border-bottom: 1px dashed #aaa; }
+
+/* Links */
+.v-card a > span {
+  border-bottom: 1px dashed #aaa; }
+
+/* Details Item */
+.v-card .ui-item {
+  max-width: 90px;
+  margin: 15px auto; }
+
+@media (max-width: 340px) {
+  .v-card .ui-item {
+    text-align: center; } }
+/* Heading */
+.v-card .ui-item h4 {
+  font-size: 14px;
+  line-height: 30px;
+  text-transform: uppercase; }
+
+/* Unordered Listing */
+.v-card .ui-item ul {
+  padding: 0px;
+  margin: 0px;
+  list-style-type: none; }
+
+.v-card .ui-item ul > li {
+  font-size: 12px;
+  line-height: 18px;
+  margin: 5px 0px;
+  color: #777; }
+
+/* Legal disclosure */
 dl dd {
   margin-bottom: 15px !important; }
 
@@ -458,91 +1026,24 @@ dl dd {
 .dim1half {
   width: 40%; }
 
-.text-right {
-  text-align: right; }
-
-.text-left {
-  text-align: left; }
-
-.text-center {
-  text-align: center; }
-
-.text-justify {
-  text-align: justify; }
-
 .pad-right {
   padding-right: 20px; }
 
 .pad-left {
   padding-left: 15px; }
 
-hr {
-  display: block;
-  height: 1px;
-  border: 0;
-  border-top: 1px solid #efefef;
-  margin: 3.2em 0;
-  padding: 0; }
+.v-card p.source {
+  font-size: 13px; }
 
-section {
-  position: relative;
-  width: 80%;
-  max-width: 700px;
-  margin: 4rem auto;
-  word-break: normal;
-  hyphens: auto; }
-
-footer {
-  margin-top: 100px;
-  font-size: 1.2rem;
+.v-card p.source-right {
+  font-size: 13px;
   text-align: right; }
 
-footer .notes {
-  float: left; }
+.v-card p.legal {
+  text-align: justify; }
 
-footer hr {
-  display: block;
-  height: 1px;
-  border: 0;
-  border-top: 1px solid #efefef;
-  margin: 3.2em 0 0;
-  padding: 0; }
-
-@media only screen and (max-width: 900px) {
-  section {
-    font-size: 0.9em;
-    line-height: 1.6em; }
-
-  h1 {
-    font-size: 4.8rem;
-    text-indent: -2px; }
-
-  h2 {
-    font-size: 3.8rem; }
-
-  h3 {
-    font-size: 3.3rem; }
-
-  h4 {
-    font-size: 2.8rem; } }
-@media only screen and (max-width: 500px) {
-  #logo img {
-    max-height: 80px; }
-
-  section {
-    width: auto;
-    margin-left: 16px;
-    margin-right: 16px; }
-
-  h1, h2 {
-    font-size: 3rem;
-    line-height: 1.1em;
-    letter-spacing: -1px; }
-
-  h3 {
-    font-size: 2.8rem; }
-
-  h4 {
-    font-size: 2.3rem; } }
+footer {
+  padding: 0px 20px 20px 20px;
+  font-size: 12px; }
 
 /*# sourceMappingURL=style.css.map */
